@@ -1,3 +1,8 @@
+2007-11-18  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* net/tramp.el (tramp-terminal-type): Remove duplicated
+	definition.
+
 2007-11-19  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/check-declare.el (check-declare-verify): If fnfile
